<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/controller_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/controller_radioMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/controller_check_man" />

        <RadioButton
            android:id="@+id/controller_radiowoMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_check_woman" />

        <RadioButton
            android:id="@+id/controller_radioelse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_check_notMan" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/controller_chkJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="java" />

        <CheckBox
            android:id="@+id/controller_chknet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=".net" />

        <CheckBox
            android:id="@+id/controller_chkAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="android" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/controller_tButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="开灯"
        android:textOn="关灯" />

</LinearLayout>