<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- android:scaleType="centerInside" -->

    <HorizontalScrollView
        android:layout_width="320dp"
        android:layout_height="wrap_content" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp" >

            <ImageView
                android:id="@+id/controller_imageTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:contentDescription="@string/controller_imageInfo"
                android:src="@drawable/btn_small" />
        </ScrollView>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/controller_btnAlpahPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_alphaPlus" />

        <Button
            android:id="@+id/controller_btnAlpahdel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_alphaDel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ZoomButton
            android:id="@+id/controller_btnZoomin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_plus" />

        <ZoomButton
            android:id="@+id/controller_btnZoomout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/controller_smallimage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/controller_imageInfo" />
    </LinearLayout>

</LinearLayout>